[package]
name = "rubtle-duktape"
version = "0.1.0"
description = "Duktape bindings"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
edition = "2018"
#license = "GPLv2"
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/rubtle"

[build-dependencies]
bindgen = "0.54"
cc = "1.0.54"