[package]
name = "rubtle-lib"
version = "0.1.0"
description = "Rubtle library"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
edition = "2018"
#license = "GPLv2"
license-file = "LICENSE"
homepage = "https://subforge.org"
repository = "https://hg.unexist.dev/rubtle"

[dependencies]
cesu8 = "1.1.0"

[dependencies.rubtle-duktape]
version = "0.1.0"
path = "../rubtle-duktape"
