[package]
name = "rubtle"
version = "0.1.0"
description = "Rubtle main"
authors = [
    "Christoph Kappel <unexist@subforge.org>"
]
edition = "2018"
#license = "GPLv2"
license-file = "LICENSE"
homepage = "https://subforge.org"
repository = "https://hg.subforge.org/rubtle"

[dependencies.rubtle-lib]
version = "0.1.0"
path = "../rubtle-lib"